# SecurityReview

./: .env  .gitignore  README.md  run_security_pipeline.sh  taintedSources.txt  yoctogram1.json  yoctogramFull.json  yoctogramSmall.json
Trace/: package-lock.json  package.json
Trace/prompts/: step1Analysis.d.ts  step1Analysis.d.ts.map  step1Analysis.js  step1Analysis.js.map  step1Analysis.ts
Trace/src/: index.d.ts  index.js  (+7 more)
deployment_understanding/: .env.example  .gitignore  README.md  package-lock.json  package.json  yoctogram-gpt-5.json
generate_sources/: .gitignore  AGENT_README.md  README.md  agent.py  analyze.py  deployment_models.py  deployment_parser.py  example.py  models.py  requirements.txt  scan-all.sh  scanner.py  test_deployment_parser.py  yoctogram.jsonl
yoctogram-app-main/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  prestart.sh  pyproject.toml
yoctogram-app-main/alembic/: env.py
yoctogram-app-main/alembic/versions/: eca3cde4819f_initial.py
yoctogram-app-main/app/: log.py  main.py  prestart.py
yoctogram-app-main/app/api/: deps.py
yoctogram-app-main/app/api/v1/: api.py
yoctogram-app-main/app/api/v1/endpoints/: auth.py  feed.py  images.py  social.py  users.py
yoctogram-app-main/app/core/: config.py  security.py
yoctogram-app-main/app/crud/: feed.py  image.py
yoctogram-app-main/app/db/: session.py
yoctogram-app-main/app/ext/: s3.py
yoctogram-app-main/app/models/: __init__.py  comment.py  image.py  like.py  user.py
yoctogram-app-main/app/schemas/: comment.py
yoctogram-app-main/compose/localstack/: init_s3.py
(+32 files in other folders)
